--- a/HTML/pageSitemap.html
+++ b/HTML/pageSitemap.html
@@ -27,7 +27,7 @@
                 <div class="grid__row">
                         <div class="grid__column-3">
                             <div class="header_logo">
-                                <a class="header_logo-link" href="/Index.html">
+                                <a class="header_logo-link" href="/index.html">
                                     <img class="header_logo-img" src="../img/LOGOMAINs.png" alt="">
                                 </a>
                             </div>
@@ -57,7 +57,7 @@
         <!-- Menu -->
         <div class="header__menu">
             <ul class="header__menu-parents">
-                <li class="header__menu-child"><a class="header__menu-child-link" href="/Index.html">Trang Chủ</a></li>
+                <li class="header__menu-child"><a class="header__menu-child-link" href="/index.html">Trang Chủ</a></li>
                 <li class="header__menu-child"><a class="header__menu-child-link" href="../HTML/GioiThieu.html">Giới Thiệu</a></li>
                 <li class="header__menu-child">
                     <a class="header__menu-child-link" href="../HTML/allProducts.html">Sản phẩm <i class="fa-solid fa-caret-down"></i></a>
@@ -174,7 +174,7 @@
             <div class="noi-dung-footer footer-links">
                 <h2>Đường Dẫn</h2>
                 <ul class="footer-links-parent">
-                    <li><a href="../HTML/Index.html">Trang Chủ</a></li>
+                    <li><a href="../HTML/index.html">Trang Chủ</a></li>
                     <li><a href="../HTML/GioiThieu.html">Giới thiệu</a></li>
                     <li><a href="../HTML/allProducts.html">Sản phẩm</a></li>
                     <li><a href="../HTML/News.html">Tin hot</a></li>
