Add new project food

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title> 
-    <link rel="stylesheet" href="./CSS/baiTapLon.css">
+    <link rel="stylesheet" href="../CSS/baiTapLon.css">
     <link rel="stylesheet" href="./Icons/fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./CSS/slick.css" />
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
@@ -43,7 +43,7 @@
                     <div class="grid__row">
                             <div class="grid__column-3">
                                 <div class="header_logo">
-                                    <a class="header_logo-link" href="./index.html">
+                                    <a class="header_logo-link" href="/index.html">
                                         <img class="header_logo-img" src="./img/LOGOMAINs.png" alt="">
                                     </a>
                                 </div>
@@ -74,7 +74,7 @@
             <!-- Menu -->
             <div class="header__menu">
                 <ul class="header__menu-parents">
-                    <li class="header__menu-child"><a class="header__menu-child-link" href="./index.html">Trang Chủ</a></li>
+                    <li class="header__menu-child"><a class="header__menu-child-link" href="/index.html">Trang Chủ</a></li>
                     <li class="header__menu-child"><a class="header__menu-child-link" href="./HTML/GioiThieu.html">Giới Thiệu</a></li>
                     <li class="header__menu-child">
                         <a class="header__menu-child-link" href="./HTML/allProducts.html">Sản phẩm <i class="fa-solid fa-caret-down"></i></a>
@@ -249,7 +249,7 @@
                 <div class="noi-dung-footer footer-links">
                     <h2>Đường Dẫn</h2>
                     <ul class="footer-links-parent">
-                        <li><a href="../HTML/Index.html">Trang Chủ</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
                         <li><a href="../HTML/GioiThieu.html">Giới thiệu</a></li>
                         <li><a href="../HTML/allProducts.html">Sản phẩm</a></li>
                         <li><a href="../HTML/News.html">Tin hot</a></li>
