--- a/HTML/pageRegister.html
+++ b/HTML/pageRegister.html
@@ -161,7 +161,7 @@
     <div class="main-register">
 
         <div class="form-register">    
-            <a href="../HTML/index.html"><img class="img-register-logo" src="../img/LOGOMAINs.png" alt=""> </a>     
+            <a href="../HTML/home.html"><img class="img-register-logo" src="../img/LOGOMAINs.png" alt=""> </a>     
             <div class="form-header">     
                 <h3 class="form-heading" >Đăng ký</h3>                        
             </div>
@@ -195,7 +195,7 @@
                     <input type="text" id="address" class="form-body-input" placeholder="Nhập địa chỉ">
                     </div>
             <div class="form-control">
-                <button class="btn-back" ><a class="link-back" href="/index.html">Trang chủ</a></button>
+                <button class="btn-back" ><a class="link-back" href="../HTML/home.html">Trang chủ</a></button>
                 <button class="btn-register" onclick="valid()">Đăng ký</button>
             </div>
             <div class="form__socials">
